--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file_metadata",
+  "name": "@radii-fcc-backend/file_metadata",
   "version": "0.0.1",
   "description": "API project for freeCodeCamp",
   "main": "index.js",
@@ -7,17 +7,18 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "cors": "^2.8.5"
+    "multer": "^1.4.5-lts.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/freeCodeCamp/boilerplate-project-filemetadata"
+    "url": "https://radii.dev/freeCodeCamp.org-Back-End-Dev-and-APIs/filemetadata"
   },
   "keywords": [
     "node",
     "express"
   ],
-  "license": "MIT"
+  "license": "AGPL-3.0-or-later"
 }
